pkg/dsl/grammar/gen/gludsl_parser.go
// Code generated from GluDSL.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // GluDSL

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type GluDSLParser struct {
	*antlr.BaseParser
}

var GluDSLParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func gludslParserInit() {
	staticData := &GluDSLParserStaticData
	staticData.LiteralNames = []string{
		"", "'type'", "'name'", "','", "'system'", "'pipeline'", "'source'",
		"'phase'", "'trigger'", "'labels'", "'promotes_from'", "'interval'",
		"'matches_label'", "'{'", "'}'", "'='",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "SYSTEM", "PIPELINE", "SOURCE", "PHASE", "TRIGGER",
		"LABELS", "PROMOTES_FROM", "INTERVAL", "MATCHES_LABEL", "LBRACE", "RBRACE",
		"EQUALS", "STRING", "IDENTIFIER", "WS",
	}
	staticData.RuleNames = []string{
		"program", "system", "systemBody", "pipeline", "pipelineBody", "source",
		"sourceBody", "phase", "phaseBody", "labels", "labelPair", "trigger",
		"triggerBody",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GluDSLParserInit initializes any static state used to implement GluDSLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGluDSLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GluDSLParserInit() {
	staticData := &GluDSLParserStaticData
	staticData.once.Do(gludslParserInit)
}

// NewGluDSLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGluDSLParser(input antlr.TokenStream) *GluDSLParser {
	GluDSLParserInit()
	this := new(GluDSLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GluDSLParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "GluDSL.g4"

	return this
}

// GluDSLParser tokens.
const (
	GluDSLParserEOF           = antlr.TokenEOF
	GluDSLParserT__0          = 1
	GluDSLParserT__1          = 2
	GluDSLParserT__2          = 3
	GluDSLParserSYSTEM        = 4
	GluDSLParserPIPELINE      = 5
	GluDSLParserSOURCE        = 6
	GluDSLParserPHASE         = 7
	GluDSLParserTRIGGER       = 8
	GluDSLParserLABELS        = 9
	GluDSLParserPROMOTES_FROM = 10
	GluDSLParserINTERVAL      = 11
	GluDSLParserMATCHES_LABEL = 12
	GluDSLParserLBRACE        = 13
	GluDSLParserRBRACE        = 14
	GluDSLParserEQUALS        = 15
	GluDSLParserSTRING        = 16
	GluDSLParserIDENTIFIER    = 17
	GluDSLParserWS            = 18
)

// GluDSLParser rules.
const (
	GluDSLParserRULE_program      = 0
	GluDSLParserRULE_system       = 1
	GluDSLParserRULE_systemBody   = 2
	GluDSLParserRULE_pipeline     = 3
	GluDSLParserRULE_pipelineBody = 4
	GluDSLParserRULE_source       = 5
	GluDSLParserRULE_sourceBody   = 6
	GluDSLParserRULE_phase        = 7
	GluDSLParserRULE_phaseBody    = 8
	GluDSLParserRULE_labels       = 9
	GluDSLParserRULE_labelPair    = 10
	GluDSLParserRULE_trigger      = 11
	GluDSLParserRULE_triggerBody  = 12
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	System() ISystemContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GluDSLParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) System() ISystemContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISystemContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISystemContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *GluDSLParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GluDSLParserRULE_program)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(26)
		p.System()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISystemContext is an interface to support dynamic dispatch.
type ISystemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SYSTEM() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	SystemBody() ISystemBodyContext
	RBRACE() antlr.TerminalNode

	// IsSystemContext differentiates from other interfaces.
	IsSystemContext()
}

type SystemContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySystemContext() *SystemContext {
	var p = new(SystemContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_system
	return p
}

func InitEmptySystemContext(p *SystemContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_system
}

func (*SystemContext) IsSystemContext() {}

func NewSystemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SystemContext {
	var p = new(SystemContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GluDSLParserRULE_system

	return p
}

func (s *SystemContext) GetParser() antlr.Parser { return s.parser }

func (s *SystemContext) SYSTEM() antlr.TerminalNode {
	return s.GetToken(GluDSLParserSYSTEM, 0)
}

func (s *SystemContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(GluDSLParserIDENTIFIER, 0)
}

func (s *SystemContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(GluDSLParserLBRACE, 0)
}

func (s *SystemContext) SystemBody() ISystemBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISystemBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISystemBodyContext)
}

func (s *SystemContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(GluDSLParserRBRACE, 0)
}

func (s *SystemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SystemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SystemContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.EnterSystem(s)
	}
}

func (s *SystemContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.ExitSystem(s)
	}
}

func (p *GluDSLParser) System() (localctx ISystemContext) {
	localctx = NewSystemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GluDSLParserRULE_system)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(28)
		p.Match(GluDSLParserSYSTEM)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(29)
		p.Match(GluDSLParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(30)
		p.Match(GluDSLParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(31)
		p.SystemBody()
	}
	{
		p.SetState(32)
		p.Match(GluDSLParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISystemBodyContext is an interface to support dynamic dispatch.
type ISystemBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllPipeline() []IPipelineContext
	Pipeline(i int) IPipelineContext

	// IsSystemBodyContext differentiates from other interfaces.
	IsSystemBodyContext()
}

type SystemBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySystemBodyContext() *SystemBodyContext {
	var p = new(SystemBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_systemBody
	return p
}

func InitEmptySystemBodyContext(p *SystemBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_systemBody
}

func (*SystemBodyContext) IsSystemBodyContext() {}

func NewSystemBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SystemBodyContext {
	var p = new(SystemBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GluDSLParserRULE_systemBody

	return p
}

func (s *SystemBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *SystemBodyContext) AllPipeline() []IPipelineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPipelineContext); ok {
			len++
		}
	}

	tst := make([]IPipelineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPipelineContext); ok {
			tst[i] = t.(IPipelineContext)
			i++
		}
	}

	return tst
}

func (s *SystemBodyContext) Pipeline(i int) IPipelineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPipelineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPipelineContext)
}

func (s *SystemBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SystemBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SystemBodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.EnterSystemBody(s)
	}
}

func (s *SystemBodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.ExitSystemBody(s)
	}
}

func (p *GluDSLParser) SystemBody() (localctx ISystemBodyContext) {
	localctx = NewSystemBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GluDSLParserRULE_systemBody)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == GluDSLParserPIPELINE {
		{
			p.SetState(34)
			p.Pipeline()
		}

		p.SetState(39)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPipelineContext is an interface to support dynamic dispatch.
type IPipelineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PIPELINE() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	PipelineBody() IPipelineBodyContext
	RBRACE() antlr.TerminalNode

	// IsPipelineContext differentiates from other interfaces.
	IsPipelineContext()
}

type PipelineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPipelineContext() *PipelineContext {
	var p = new(PipelineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_pipeline
	return p
}

func InitEmptyPipelineContext(p *PipelineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_pipeline
}

func (*PipelineContext) IsPipelineContext() {}

func NewPipelineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PipelineContext {
	var p = new(PipelineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GluDSLParserRULE_pipeline

	return p
}

func (s *PipelineContext) GetParser() antlr.Parser { return s.parser }

func (s *PipelineContext) PIPELINE() antlr.TerminalNode {
	return s.GetToken(GluDSLParserPIPELINE, 0)
}

func (s *PipelineContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(GluDSLParserIDENTIFIER, 0)
}

func (s *PipelineContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(GluDSLParserLBRACE, 0)
}

func (s *PipelineContext) PipelineBody() IPipelineBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPipelineBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPipelineBodyContext)
}

func (s *PipelineContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(GluDSLParserRBRACE, 0)
}

func (s *PipelineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PipelineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PipelineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.EnterPipeline(s)
	}
}

func (s *PipelineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.ExitPipeline(s)
	}
}

func (p *GluDSLParser) Pipeline() (localctx IPipelineContext) {
	localctx = NewPipelineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GluDSLParserRULE_pipeline)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Match(GluDSLParserPIPELINE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(41)
		p.Match(GluDSLParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(42)
		p.Match(GluDSLParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(43)
		p.PipelineBody()
	}
	{
		p.SetState(44)
		p.Match(GluDSLParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPipelineBodyContext is an interface to support dynamic dispatch.
type IPipelineBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllSource() []ISourceContext
	Source(i int) ISourceContext
	AllPhase() []IPhaseContext
	Phase(i int) IPhaseContext
	AllTrigger() []ITriggerContext
	Trigger(i int) ITriggerContext

	// IsPipelineBodyContext differentiates from other interfaces.
	IsPipelineBodyContext()
}

type PipelineBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPipelineBodyContext() *PipelineBodyContext {
	var p = new(PipelineBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_pipelineBody
	return p
}

func InitEmptyPipelineBodyContext(p *PipelineBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_pipelineBody
}

func (*PipelineBodyContext) IsPipelineBodyContext() {}

func NewPipelineBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PipelineBodyContext {
	var p = new(PipelineBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GluDSLParserRULE_pipelineBody

	return p
}

func (s *PipelineBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *PipelineBodyContext) AllSource() []ISourceContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISourceContext); ok {
			len++
		}
	}

	tst := make([]ISourceContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISourceContext); ok {
			tst[i] = t.(ISourceContext)
			i++
		}
	}

	return tst
}

func (s *PipelineBodyContext) Source(i int) ISourceContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISourceContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISourceContext)
}

func (s *PipelineBodyContext) AllPhase() []IPhaseContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPhaseContext); ok {
			len++
		}
	}

	tst := make([]IPhaseContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPhaseContext); ok {
			tst[i] = t.(IPhaseContext)
			i++
		}
	}

	return tst
}

func (s *PipelineBodyContext) Phase(i int) IPhaseContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPhaseContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPhaseContext)
}

func (s *PipelineBodyContext) AllTrigger() []ITriggerContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITriggerContext); ok {
			len++
		}
	}

	tst := make([]ITriggerContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITriggerContext); ok {
			tst[i] = t.(ITriggerContext)
			i++
		}
	}

	return tst
}

func (s *PipelineBodyContext) Trigger(i int) ITriggerContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITriggerContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITriggerContext)
}

func (s *PipelineBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PipelineBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PipelineBodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.EnterPipelineBody(s)
	}
}

func (s *PipelineBodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.ExitPipelineBody(s)
	}
}

func (p *GluDSLParser) PipelineBody() (localctx IPipelineBodyContext) {
	localctx = NewPipelineBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, GluDSLParserRULE_pipelineBody)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(51)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&448) != 0 {
		p.SetState(49)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case GluDSLParserSOURCE:
			{
				p.SetState(46)
				p.Source()
			}

		case GluDSLParserPHASE:
			{
				p.SetState(47)
				p.Phase()
			}

		case GluDSLParserTRIGGER:
			{
				p.SetState(48)
				p.Trigger()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(53)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISourceContext is an interface to support dynamic dispatch.
type ISourceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SOURCE() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	SourceBody() ISourceBodyContext
	RBRACE() antlr.TerminalNode

	// IsSourceContext differentiates from other interfaces.
	IsSourceContext()
}

type SourceContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceContext() *SourceContext {
	var p = new(SourceContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_source
	return p
}

func InitEmptySourceContext(p *SourceContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_source
}

func (*SourceContext) IsSourceContext() {}

func NewSourceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceContext {
	var p = new(SourceContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GluDSLParserRULE_source

	return p
}

func (s *SourceContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceContext) SOURCE() antlr.TerminalNode {
	return s.GetToken(GluDSLParserSOURCE, 0)
}

func (s *SourceContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(GluDSLParserIDENTIFIER, 0)
}

func (s *SourceContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(GluDSLParserLBRACE, 0)
}

func (s *SourceContext) SourceBody() ISourceBodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISourceBodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISourceBodyContext)
}

func (s *SourceContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(GluDSLParserRBRACE, 0)
}

func (s *SourceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.EnterSource(s)
	}
}

func (s *SourceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GluDSLListener); ok {
		listenerT.ExitSource(s)
	}
}

func (p *GluDSLParser) Source() (localctx ISourceContext) {
	localctx = NewSourceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, GluDSLParserRULE_source)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.Match(GluDSLParserSOURCE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(55)
		p.Match(GluDSLParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(56)
		p.Match(GluDSLParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(57)
		p.SourceBody()
	}
	{
		p.SetState(58)
		p.Match(GluDSLParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISourceBodyContext is an interface to support dynamic dispatch.
type ISourceBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllIDENTIFIER() []antlr.TerminalNode
	IDENTIFIER(i int) antlr.TerminalNode

	// IsSourceBodyContext differentiates from other interfaces.
	IsSourceBodyContext()
}

type SourceBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceBodyContext() *SourceBodyContext {
	var p = new(SourceBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_sourceBody
	return p
}

func InitEmptySourceBodyContext(p *SourceBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GluDSLParserRULE_sourceBody
}

func (*SourceBodyContext) IsSourceBodyContext() {}

func NewSourceBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceBodyContext {
	var p = new(SourceBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GluDSLParserRULE_sourceBody

	return p
}

func (s *SourceBodyContext) GetParser() antlr.Parser { return s.parser }
